--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "dependencies": {
     "mongoose": "^5.9.13",
     "next": "latest",
+    "next-auth": "^3.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "swr": "0.2.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "postcss": "^8.2.6",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.0.3"
+  }
 }
