--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "mongoose": "^5.9.13",
     "next": "latest",
     "next-auth": "^3.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "swr": "0.2.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-query": "^3.9.8",
+    "swr": "0.4.2"
   },
   "license": "MIT",
   "devDependencies": {
