--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "mongoose": "^5.9.13",
+    "mongoose-paginate-v2": "^1.3.15",
     "next": "latest",
     "next-auth": "^3.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.9.8",
+    "react-virtualized": "^9.22.3",
     "swr": "0.4.2"
   },
   "license": "MIT",
