--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "mongodb": "^3.6.4",
     "mongoose": "^5.9.13",
     "mongoose-paginate-v2": "^1.3.15",
+    "mongoose-unique-validator": "^2.0.3",
     "next": "latest",
     "next-auth": "^3.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-query": "^3.9.8",
     "react-virtualized": "^9.22.3",
     "swr": "0.4.2"
@@ -23,5 +27,8 @@
     "postcss": "^8.2.6",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^2.0.3"
+  },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.0"
   }
 }
