--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "framer-motion": "^3.7.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.9.13",
     "mongoose-paginate-v2": "^1.3.15",
