--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^3.7.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.9.13",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "mongoose-paginate-v2": "^1.3.15",
     "mongoose-unique-validator": "^2.0.3",
     "next": "latest",
